# snowflake-e2e-ml-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sql  setup_notebook.sql
notebooks/: churn_prediction.ipynb  requirements.txt
scripts/: capture_screenshots.py  debug_mvrun_spcs.py  deploy_notebook.sh  deploy_streamlit.sh  generate_data.py  generate_data_quick.py  parallel_screenshots.py  pull_notebook.sh
streamlit/: assets.py  environment.yml  ml_explanations.py  pyproject.toml  streamlit_app.py
streamlit/.streamlit/: config.toml
streamlit/pages/: business_impact.py  dashboard.py  executive_summary.py  model_health.py  predict.py
